--- a/coffee_finder_app/pubspec.yaml
+++ b/coffee_finder_app/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  google_maps_flutter:
+    git:
+      url: git://github.com/flutter/plugins
+      path: packages/google_maps_flutter
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
