--- a/coffee_finder_app/pubspec.yaml
+++ b/coffee_finder_app/pubspec.yaml
@@ -22,12 +22,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  google_maps_flutter:
-    git:
-      url: git://github.com/flutter/plugins
-      path: packages/google_maps_flutter
+  # google_maps_flutter:
+  #   git:
+  #     url: git://github.com/flutter/plugins
+  #     path: packages/google_maps_flutter
+  google_maps_flutter: <=0.0.3+3
   cupertino_icons: ^0.1.2
-  location: ^1.4.1
+  location: <=1.4.1
 
 dev_dependencies:
   flutter_test:
