--- a/coffee_finder_app/pubspec.yaml
+++ b/coffee_finder_app/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   google_maps_flutter: <=0.0.3+3
   cupertino_icons: ^0.1.2
   location: <=1.4.1
+  google_maps_webservice: <=0.0.9
 
 dev_dependencies:
   flutter_test:
